--- a/DevilDaggersShaders.Wpf/DevilDaggersShaders.Wpf.csproj
+++ b/DevilDaggersShaders.Wpf/DevilDaggersShaders.Wpf.csproj
@@ -1,13 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\DevilDaggersShaders\DevilDaggersShaders.csproj" />
   </ItemGroup>
-
 </Project>
